deploy/k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joossam-dev-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - dev.joossameng.kro.kr
    secretName: joossam-dev-tls
  rules:
    - host: dev.joossameng.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: joossam-service
                port:
                  number: 80
